Associate generated activities with top-level parent